--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "vitest"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -22,6 +23,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^6.0.1",
     "sass-loader": "^10.2.0",
+    "vitest": "^0.17.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
